# bot-concurso

./: .env.example  Makefile  README.md  docker-compose.yaml  main.py  requirements.txt
.github/workflows/: fetch_contests.yaml
app/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
app/infra/: arq_client.py  db.py  redis_client.py  s3_client.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial.py
app/modules/config/: config.py
app/modules/datas/json/: data.json
app/modules/models/: contest.py
app/modules/repository/: contest_repository.py
app/modules/scraping/: extraction.py  transform.py
app/modules/utils/: file_dirs.py  s3_service.py
app/modules/workers/: pipeline.py  run_job.py  scheduler_contest.py  worker_settings.py
app/routes/: contests_routes.py
app/server/: main.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
