[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.50",
    "fastapi[standard]>=0.139.2",
    "fastapi-pagination>=0.15.15",
    "httpx>=0.28.1",
    "playwright>=1.61.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "redis[hiredis]>=5.2,<6",
    "uvicorn>=0.51.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "arq>=0.28.0",
]
